feat: github actions

--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -1,8 +1,11 @@
 name: NPM
 
 on:
+  push:
+    branches:
+      - master
+
   schedule:
-    # * is a special character in YAML so you have to quote this string
     - cron:  '*/5 * * * *'
 
 jobs:
