--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -6,7 +6,7 @@ on:
       - master
 
   schedule:
-    - cron:  '*/5 * * * *'
+    - cron:  '* * * * *'
 
 jobs:
   install:
@@ -22,4 +22,13 @@ jobs:
       - run: npx caz --version
       - run: npx caz --version
       - run: npx caz --version
-      - run: npm install caz
+      - run: npm install caz --registry=https://registry.npmjs.org/
+      - run: npm install caz --registry=https://registry.npm.taobao.org/
+      - run: npm install caz --registry=https://registry.npmjs.org/
+      - run: npm install caz --registry=https://registry.npm.taobao.org/
+      - run: npm install caz --registry=https://registry.npmjs.org/
+      - run: npm install caz --registry=https://registry.npm.taobao.org/
+      - run: npm install caz --registry=https://registry.npmjs.org/
+      - run: npm install caz --registry=https://registry.npm.taobao.org/
+      - run: npm install caz --registry=https://registry.npmjs.org/
+      - run: npm install caz --registry=https://registry.npm.taobao.org/
