--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
 
-#   schedule:
-#     - cron:  '*/60 * * * *'
+  schedule:
+    - cron:  '*/60 * * * *'
 
 jobs:
   install:
