--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
 
-  schedule:
-    - cron: '0 8,12,16,20 * * *'
+  # schedule:
+  #   - cron: '0 8,12,16,20 * * *'
 
 jobs:
   commit:
